--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon" ><i class='bx bx-menu bx-md' style='color:#ffffff;position: relative;bottom: 5px;'  ></i></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <div class="collapse navbar-collapse navv" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto mb-2 mb-lg-0 ms-auto nav-elements">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
