--- a/static/media.html
+++ b/static/media.html
@@ -29,7 +29,7 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon" ><i class='bx bx-menu bx-md' style='color:#ffffff'  ></i></span>
+                <span class="navbar-toggler-icon" ><i class='bx bx-menu bx-md' style='color:#ffffff; position: relative; bottom: 5px;'  ></i></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto mb-2 mb-lg-0 ms-auto nav-elements">
@@ -72,7 +72,7 @@
             </div>
             <!-- <img src="../assets/img/avionics-home.png" alt=""> -->
         </section>
-        <section id="our-department" class="media-depart">
+        <section id="media-department" class="media-depart">
             <h1>Departments in Media & Marketing</h1>
             <div class="avionics-slider">
                 <div>
@@ -87,7 +87,7 @@
                 </a>
             </div>
         </section>
-        <section id="avionics-member">
+        <section id="media-member">
             <h1>Team Members</h1>
             <div id="avionics-seniors">
                 <div id="seniors-box">
