--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     <h3>Design & Modelling</h3>
                     <span>Design , Analyse & Manufacture the Aircraft</span>
                 </a>
-                <a id="media-department" href="./static/media.html">
+                <a id="media-departmentt" href="./static/media.html">
                     <img class='department-img' src="./assets/img/media.jpg" alt="">
                     <h3>Media & Marketing</h3>
                     <span>Handles Team Social Media Accounts and be in constant touch with our sponsors</span>
