--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="./static/avionics.html">Avionics</a></li>
                             <li><a class="dropdown-item" href="./static/design.html">Design</a></li>
-                            <li><a class="dropdown-item" href="./static/media.html">M & M</a></li>
+                            <!-- <li><a class="dropdown-item" href="./static/media.html">M & M</a></li> -->
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -79,7 +79,7 @@
             </div>
             <div id="date-counter">
                 <div id="counter"></div>
-                <h4>SAE AERO DESIGN EAST, LAKELAND, FLORIDA, USA</h4>
+                <h4>SAE AERO DESIGN WEST, CALIFORNIA, USA</h4>
             </div>
         </section>
         <section id="our-department">
@@ -95,7 +95,7 @@
                     <h3>Design & Modelling</h3>
                     <span>Design , Analyse & Manufacture the Aircraft</span>
                 </a>
-                <a id="media-departmentt" href="./static/media.html">
+                <a id="media-departmentt" href="#">
                     <img class='department-img' src="./assets/img/media.jpg" alt="">
                     <h3>Media & Marketing</h3>
                     <span>Handles Team Social Media Accounts and be in constant touch with our sponsors</span>
@@ -104,7 +104,7 @@
         </section>
         <section id="rankings">
             <h1 id="ranking-head">Rankings</h1>
-            <img src="./assets/img/rankings.png" alt="ranking" id="ranking-img">
+            <img src="./assets/img/rankings.jpg" alt="ranking" id="ranking-img">
             <a href="./static/achievements.html" id="acheivement-btn">Click Here to See our Acheivements</a>
         </section>
         <section id="contact-section">
