--- a/static/avionics.html
+++ b/static/avionics.html
@@ -44,7 +44,7 @@
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="#">Avionics</a></li>
                             <li><a class="dropdown-item" href="./design.html">Design</a></li>
-                            <li><a class="dropdown-item" href="./media.html">M & M</a></li>
+                            <!-- <li><a class="dropdown-item" href="./media.html">M & M</a></li> -->
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -95,45 +95,53 @@
             <div id="avionics-seniors">
                 <div id="seniors-box">
                     <div class="avionics-box">
+                        <img src="../assets/img/avionics/praveen.jpg" alt="" class="img-box">
+                        <span>Praveen Bhandari<br> <b style="color: #ffffff; letter-spacing: 1px;text-shadow: 1px -1px 23px rgba(255,255,255,0.8);">Mentor</b></span>
+                    </div>
+                    <div class="avionics-box">
                         <img src="../assets/img/avionics/aiden.jpg" alt="" class="img-box">
-                        <span>Aiden Samuel <br>  <b style="color: #ffffff; letter-spacing: 1px;">ACS Head</b></span>
+                        <span>Aiden Samuel<br> <b style="color: #ffffff; letter-spacing: 1px;text-shadow: 1px -1px 23px rgba(255,255,255,0.8);">ACS Head</b></span>
                     </div>
                     <div class="avionics-box">
                         <img src="../assets/img/avionics/arpita.png" alt="" class="img-box">
-                        <span>Arpita Khot <br> <b style="color: #ffffff; letter-spacing: 1px;">DAS HEAD</b></span>
+                        <span>Arpita Khot<br>  <b style="color: #ffffff; letter-spacing: 1px;text-shadow: 1px -1px 23px rgba(255,255,255,0.8);">DAS Head</b></span>
                     </div>
                     <div class="avionics-box">
-                        <img src="../assets/img/avionics/edryn.jpg" alt="" class="img-box">
+                        <img src="../assets/img/avionics/edryn1.jpeg" alt="" class="img-box edryn-img">
+                        <span class="single-name">Edryn Eazhakadan</span>
+                    </div>
+                    <div class="avionics-box">
+                        <img src="../assets/img/avionics/junnu.jpg" alt="" class="img-box edryn-img">
+                        <span class="single-name">Mirza Mohd Junaid</span>
+                    </div>
+                    <!-- <div class="avionics-box">
+                        <img src="../assets/img/avionics/edryn.jpeg" alt="" class="img-box">
                         <span class="single-name">Edryn</span>
-                    </div>
-                    <div class="avionics-box">
-                        <img src="../assets/img/avionics/shaun.jpg" alt="" class="img-box">
-                        <span class="single-name">Shaun</span>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <br><br>
             <div id="avionics-juniors">
                 <div id="juniors-box">
                     <div class="avionics-box">
-                        <img src="../assets/img/avionics/junaid.jpg" alt="" class="img-box">
-                        <span class="single-name">Mirza Mohd Junaid</span>
+                        <img src="../assets/img/avionics/ashvini.jpg" alt="" class="img-box">
+                        <span class="single-name">Ashvini</span>
                     </div>
                     <div class="avionics-box">
-                        <img src="../assets/img/avionics/emin.jpg" alt="" class="img-box">
-                        <span class="single-name">Emin Joy</span>
+                        <img src="../assets/img/avionics/craig.png" alt="" class="img-box">
+                        <span class="single-name">Craig</span>
                     </div>
                     <div class="avionics-box">
-                        <img src="../assets/img/avionics/harsh.jpg" alt="" class="img-box">
-                        <span class="single-name">Harsh Chitnis</span>
+                        <img src="../assets/img/avionics/aishh.png" alt="" class="img-box">
+                        <span class="single-name">Aishwarya</span>
                     </div>
                     <div class="avionics-box">
-                        <img src="../assets/img/avionics/saqib.png" alt="" class="img-box">
-                        <span class="single-name">Saaqib Shaikh</span>
+                        <img src="../assets/img/avionics/kevin.jpg" alt="" class="img-box">
+                        <span class="single-name">Kevin</span>
                     </div>
                     <div class="avionics-box">
-                        <img src="../assets/img/avionics/eshank.jpeg" alt="" class="img-box">
-                        <span class="single-name">Eshank Bele</span>
+                        <img src="../assets/img/avionics/sarah.png" alt="" class="img-box">
+                        <span class="single-name">Sarah</span>
                     </div>
                 </div>
             </div>
