--- a/static/design.html
+++ b/static/design.html
@@ -44,7 +44,7 @@
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="./avionics.html">Avionics</a></li>
                             <li><a class="dropdown-item" href="#">Design</a></li>
-                            <li><a class="dropdown-item" href="./media.html">M & M</a></li>
+                            <!-- <li><a class="dropdown-item" href="./media.html">M & M</a></li> -->
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -93,30 +93,38 @@
         <section id="design-member">
             <h1>Team Members</h1>
             <div id="avionics-seniors">
-                <div id="seniors-box" class="design-senior-box">
-                    <div class="avionics-box">
-                        <img src="../assets/img/design/sandra.jpg" alt="" class="img-box">
-                        <span>Sandra Thayyil <br> <b style="color: #ffffff; letter-spacing: 1px;">Captain</b></span>
+                <div id="seniors-box" class="design-senior-box" style="flex-wrap: wrap;gap: 3rem;">
+                     <div class="avionics-box">
+                        <img src="../assets/img/design/asiya3.jpeg" alt="" class="img-box gajju-img">
+                        <span>Asiya Shaikh <br> <b style="color: #ffffff; letter-spacing: 1px;">Mentor</b></span>
                     </div>
                     <div class="avionics-box">
-                        <img src="../assets/img/design/asiya2.jpg" alt="" class="img-box">
-                        <span>Asiya Shaikh <br> <b style="color: #ffffff; letter-spacing: 1px;">Vice Captain</b></span>
+                        <img src="../assets/img/design/chiraj.jpeg" alt="" class="img-box gajju-img">
+                        <span> Chirag Jadhav <br>  <b style="color: #ffffff; letter-spacing: 1px;">Mentor</b></span>
                     </div>
                     <div class="avionics-box">
-                        <img src="../assets/img/design/chiraj.jpeg" alt="" class="img-box">
-                        <span> Chirag Jadhav <br>  <b style="color: #ffffff; letter-spacing: 1px;">Team Manager</b></span>
+                        <img src="../assets/img/design/peter5.png" alt="" class="img-box gajju-img">
+                        <span> Peter D'Souza<br>  <b style="color: #ffffff; letter-spacing: 1px;">Mentor</b></span>
                     </div>
                     <div class="avionics-box">
-                        <img src="../assets/img/design/sanat.jpg" alt="" class="img-box">
-                        <span> Sanat Pednekar <br>  <b style="color: #ffffff; letter-spacing: 1px;">Materials & Inventory Head</b></span>
+                        <img src="../assets/img/design/sanat.jpg" alt="" class="img-box gajju-img">
+                        <span> Sanat Pednekar <br>  <b style="color: #ffffff; letter-spacing: 1px;">Mentor</b></span>
                     </div>
                     <div class="avionics-box">
-                        <img src="../assets/img/design/neel.jpg" alt="" class="img-box">
-                        <span> Neel Mankame <br> <b style="color: #ffffff; letter-spacing: 1px;">Manufacturing Head</b></span>
+                        <img src="../assets/img/design/neel.jpg" alt="" class="img-box gajju-img">
+                        <span> Neel Mankame <br> <b style="color: #ffffff; letter-spacing: 1px;">Mentor</b></span>
                     </div>
                     <div class="avionics-box">
-                        <img src="../assets/img/design/yayati.jpg" alt="" class="img-box">
-                        <span class="single-name">Yayati Nakhate</span>
+                        <img src="../assets/img/design/yayati.jpg" alt="" class="img-box gajju-img">
+                        <span> Yayati Nakhate <br> <b style="color: #ffffff; letter-spacing: 1px;">Mentor</b></span>
+                    </div>
+                    <div class="avionics-box" style="background:url('../assets/img/design/piyush.jpg');background-size: cover;display: flex;align-items: center;justify-content: flex-end;height: 300px;">
+                        <!-- <img src="../assets/img/design/piyush.jpg" alt="" class="img-box"> -->
+                        <span>Piyush Santosh Jogale <br> <b style="color: #ffffff; letter-spacing: 1px;text-shadow: 1px -1px 23px rgba(255,255,255,0.8);">Captain</b></span>
+                    </div>
+                    <div class="avionics-box" >
+                        <img src="../assets/img/design/gajanan.jpg" alt="" class="img-box gajju-img" >
+                        <span>Gajanan Birajdar <br> <b style="color: #ffffff; letter-spacing: 1px;text-shadow: 1px -1px 23px rgba(255,255,255,0.8);">Team Manager</b></span>
                     </div>
                 </div>
             </div>
@@ -124,18 +132,18 @@
             <div id="avionics-juniors">
                 <div id="juniors-box" class="design-junior">
                     <div class="avionics-box">
-                        <img src="../assets/img/design/nathan.jpeg" alt="" class="img-box">
-                        <span class="single-name">Nathan Pereira</span>
+                        <img src="../assets/img/design/ayush kude.jpg" alt="" class="img-box">
+                        <span class="single-name">Ayush</span>
                     </div>
                     <div class="avionics-box">
-                        <img src="../assets/img/design/arya.jpg" alt="" class="img-box">
-                        <span class="single-name">Arya Anant Singarwadi</span>
+                        <img src="../assets/img/design/rion dmello.jpg" alt="" class="img-box">
+                        <span class="single-name">Rion</span>
                     </div>
                     <div class="avionics-box">
-                        <img src="../assets/img/design/harshwardhan.jpeg" alt="" class="img-box">
-                        <span class="single-name">Harshvardhan Trivedi</span>
+                        <img src="../assets/img/design/shahid.jpg" alt="" class="img-box">
+                        <span class="single-name">Shahid</span>
                     </div>
-                    <div class="avionics-box">
+                    <!-- <div class="avionics-box">
                         <img src="../assets/img/design/janvhi.jpg" alt="" class="img-box">
                         <span class="single-name">Janhavi Sachin Shinde</span>
                     </div>
@@ -144,13 +152,9 @@
                         <span class="single-name">Piyush Santosh Jogale</span>
                     </div>
                     <div class="avionics-box">
-                        <img src="../assets/img/design/gajanan.jpg" alt="" class="img-box">
+                        <img src="../assets/img/design/gajanan1.png" alt="" class="img-box">
                         <span class="single-name">Gajanan Birajdar</span>
-                    </div>
-                    <div class="avionics-box">
-                        <img src="../assets/img/design/shahaan.jpg" alt="" class="img-box">
-                        <span class="single-name">Shahaan Tufail</span>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section>
