--- a/static/achievements.html
+++ b/static/achievements.html
@@ -47,7 +47,7 @@
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="./avionics.html">Avionics</a></li>
                             <li><a class="dropdown-item" href="./design.html">Design</a></li>
-                            <li><a class="dropdown-item" href="./media.html">M & M</a></li>
+                            <!-- <li><a class="dropdown-item" href="./media.html">M & M</a></li> -->
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -64,6 +64,13 @@
         <h1 id="achievements-head">Achievements</h1>
         <section id="achievements-section">
             <!-- <div class="plane-right-box"> -->
+            <div class="plane-box hidden1">
+                <img src="../assets/img/planes/2023Bumblebee.jpg" class='plane-img' alt="moltres">
+                <div class="plane-details">
+                    <h3>Bumblebee (2022-23)</h3>
+                    <span>Bubblebee was the modern aircraft that uses all the modern equipment and analysis, The Team ranked 11th globally and 10th in Design Report.</span>
+                </div>
+            </div>
             <div class="plane-box hidden2">
                 <img src="../assets/img/planes/moltres.png" class='plane-img' alt="moltres">
                 <div class="plane-details">
